Converts QuestionActivity into QuestionFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Qwizzr</string>
     <string name="tv_main_title_text">Qwizzr</string>
     <string name="btn_main_start_text">Start</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
